--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -1,49 +1,66 @@
-#divider {
-    border-left: 1px solid;
-    padding: 1em;
-    height: max-content;
-    margin-top: auto;
-    margin-bottom: auto;
+body {
+    background-color: burlywood;
 }
-
-#box {
-    margin-top: auto;
-    margin-bottom: auto;
-}
-
-#divider2 {
-    /* border-right: 1px solid; */
-    padding: 1em;
-    transform: rotate(270deg);
-}
-
-#aboutUs {
-    font-family: "Poetsen One", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-}
-
-.row {
-    background-color: rgb(168, 238, 243);
-}
-
-.row1 {
+ul {
     display: flex;
-    height: 100%;
-    justify-content: space-between;
-    /* border: 2px solid blue; */
+    flex-wrap: wrap;
+    list-style: none;
 }
 
-.row2 {
-    display: flex;
-    align-items: center;
-    /* border: 2px solid blue; */
+li {
+    height: 20vh;
+    width: 20vh;
+    flex-grow: 1;
+
 }
 
-.row3 {
-    display: flex;
-    justify-content: space-between;
-    /* border: 2px solid blue; */
+img {
+    max-height: 100%;
+    min-width: 100%;
+    object-fit: cover;
+    vertical-align: bottom;
+}
+
+#footer {
+    padding: 0;
+    margin: 0;
+}
+
+/* li:last-child {
+    flex-grow: 10;
+} */
+
+@media (max-aspect-ratio: 1/1) {
+    li {
+        height: 30vh;
+    }
+}
+
+
+
+@media (max-height: 480px) {
+    li {
+        height: 80vh;
+    }
+}
+
+
+
+@media (max-aspect-ratio: 1/1) and (max-width: 480px) {
+    ul {
+        flex-direction: row;
+    }
+
+    li {
+        height: auto;
+        width: 100%;
+    }
+
+    img {
+        width: 100%;
+        max-height: 75vh;
+        min-width: 0;
+    }
 }
 
 .dropbtn {
