--- a/styles/newsletter.css
+++ b/styles/newsletter.css
@@ -11,13 +11,14 @@ form .container {
 }
 
 
-
 form {
     border: 4px solid #f1f1f1;
 }
 
 
 .container {
+    display: flex;
+    flex-direction: column;
     padding: 20px;
     background-color: #f1f1f1;
 }
@@ -31,11 +32,6 @@ input[type=submit] {
     display: inline-block;
     border: 1px solid #ccc;
     box-sizing: border-box;
-}
-
-
-input[type=checkbox] {
-    margin-top: 16px;
 }
 
 
